<resources>
    <string name="app_name">TravelJornal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_user">Delete User</string>
    <string name="title_activity_update">UpdateActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">MapsActivity</string>


    <string name="welcome">Welcome!!</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="change">Change Language \nTo Spanish</string>

    <string name="mapView">Map View</string>
    <string name="instructions">"Map View Instructions:\n - Click the 'Map View' button to view the world map\n - Click on any country you have visited and a marker will be placed!\n"</string>

    <string name="userID">User ID</string>
    <string name="fullName">Full Name</string>
    <string name="email">Email</string>

    <string name="regWelcome">Hi New \nUser!</string>
    <string name="done">Done</string>

    <string name="updateWelcome">Update Password</string>
    <string name="newPass">New Password</string>


</resources>